add missing theme-ui/components object keys to theme

--- a/demo/src/pages/terminal-components.mdx
+++ b/demo/src/pages/terminal-components.mdx
@@ -1,5 +1,5 @@
 ---
-navigationLabel: Components
+navigationLabel: Terminal Components
 ---
 
 # [gatsby-theme-terminal](#-gatsby-theme-terminal)
@@ -228,220 +228,3 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
 ```
 
 <Divider />
-
-# [theme-ui/components](#theme-ui-components)
-
-gatsby-theme-terminal also supports the full set of [theme-ui/componets](https://theme-ui.com/components) and below is how you use them.
-
-If you'd like to see the default theme `.js` that file can be found in [here](https://github.com/PaulieScanlon/gatsby-theme-terminal/blob/master/%40pauliescanlon/gatsby-theme-terminal/src/gatsby-plugin-theme-ui/index.js)
-
-
-## [Box](#box)
-
-```javascript
-<Box p={4} color="white" bg="primary">
-  Beep
-</Box>
-```
-
-<Box p={4} color="white" bg="primary">
-  Beep
-</Box>
-
-<Divider />
-
-## [Flex](#flex)
-
-```javascript
-<Flex>
-  <Box p={2} bg='primary' sx={{ flex: '1 1 auto' }}>
-    Flex
-  </Box>
-  <Box p={2} bg='muted'>
-    Box
-  </Box>
-</Flex>
-```
-<Flex>
-  <Box p={2} bg='primary' sx={{ flex: '1 1 auto' }}>
-    Flex
-  </Box>
-  <Box p={2} bg='muted'>
-    Box
-  </Box>
-</Flex>
-
-<Divider />
-
-## [Buttons](#buttons)
-
-```javascript
-<Button mr={2}>primary</Button>
-<Button mr={2} variant='secondary'>secondary</Button>
-<Button mr={2} variant='success'>success</Button>
-<Button variant='error'>error</Button>
-```
-<Button mr={2}>primary</Button>
-<Button mr={2} variant='secondary'>secondary</Button>
-<Button mr={2} variant='success'>success</Button>
-<Button variant='error'>error</Button>
-
-
-<Divider />
-
-## [Text](#text)
-
-```javascript
-
-<Text>Hello</Text>
-<Text variant='styles.small'>Hello</Text>
-```
-
-<Text>Hello</Text>
-<Text variant='styles.small'>Hello</Text>
-
-<Divider />
-
-## [Heading](#heading)
-
-```javascript
-<Heading variant='styles.h1'>h1</Heading>
-<Heading variant='styles.h2'>h2</Heading>
-<Heading variant='styles.h3'>h3</Heading>
-<Heading variant='styles.h4'>h4</Heading>
-<Heading variant='styles.h5'>h5</Heading>
-<Heading variant='styles.h6'>h6</Heading>
-```
-
-<Heading variant='styles.h1'>h1</Heading>
-<Heading variant='styles.h2'>h2</Heading>
-<Heading variant='styles.h3'>h3</Heading>
-<Heading variant='styles.h4'>h4</Heading>
-<Heading variant='styles.h5'>h5</Heading>
-<Heading variant='styles.h6'>h6</Heading>
-
-
-## [Link](#link)
-
-```javascript
-<Link href='#!'>Hello</Link>
-```
-
-<Link href='#!'>Hello</Link>
-
-
-<Divider />
-
-## [Badge](#badge)
-
-```javascript
-<Badge variant='primary' mb={2} mr={2}>
-  Beep boop, this is an badge!
-</Badge>
-
-<Badge variant='secondary' mb={2} mr={2}>
-  Beep boop, this is an badge!
-</Badge>
-
-<Badge variant='success' mb={2} mr={2}>
-  Beep boop, this is an badge!
-</Badge>
-
-<Badge variant='error'>
-  Beep boop, this is an badge!
-</Badge>
-```
-
-<Badge variant='primary' mb={2} mr={2}>
-  Beep boop, this is an badge!
-</Badge>
-
-<Badge variant='secondary' mb={2} mr={2}>
-  Beep boop, this is an badge!
-</Badge>
-
-<Badge variant='success' mb={2} mr={2}>
-  Beep boop, this is an badge!
-</Badge>
-
-<Badge variant='error'>
-  Beep boop, this is an badge!
-</Badge>
-
-
-<Divider />
-
-## [Image](#image)
-
-```javascript
-  <Image src='https://placekitten.com/g/400/300' />
-```
-
-<Image src='https://placekitten.com/g/400/300' />
-
-<Divider />
-
-## [Card](#card)
-
-```javascript
-<Card
-  sx={{
-    maxWidth: 400,
-  }}>
-  <Image src='https://placekitten.com/g/800/600' />
-  <Box p={3}>
-  <Heading variant='styles.h4'>Heading</Heading>
-  <Text>Text</Text>
-  </Box>
-</Card>
-```
-
-<Card
-  sx={{
-    maxWidth: 400,
-  }}>
-  <Image src='https://placekitten.com/g/800/600' />
-  <Box p={3}>
-  <Heading variant='styles.h4'>Heading</Heading>
-  <Text>Text</Text>
-  </Box>
-</Card>
-
-
-<Divider />
-
-## [Alert](#alert)
-
-```javascript
-<Alert variant='primary' mb={2}>
-  Beep boop, this is an alert!
-</Alert>
-
-<Alert variant='secondary' mb={2}>
-  Beep boop, this is an alert!
-</Alert>
-
-<Alert variant='success' mb={2}>
-  Beep boop, this is an alert!
-</Alert>
-
-<Alert variant='error'>
-  Beep boop, this is an alert!
-</Alert>
-```
-
-<Alert variant='primary' mb={2}>
-  Beep boop, this is an alert!
-</Alert>
-
-<Alert variant='secondary' mb={2}>
-  Beep boop, this is an alert!
-</Alert>
-
-<Alert variant='success' mb={2}>
-  Beep boop, this is an alert!
-</Alert>
-
-<Alert variant='error'>
-  Beep boop, this is an alert!
-</Alert>
