fix next / prev draft status

--- a/demo/src/posts/post-1.mdx
+++ b/demo/src/posts/post-1.mdx
@@ -2,6 +2,7 @@
 title: Post 1
 date: 19-02-2020
 dateModified: 20-20-2020
+author: Paul Scanlon
 tags: ["JavaScript", "React", "GatsbyJs", "HTML", "CSS", "theme-ui"]
 featuredImage: markus-spiske-466ENaLuhLY-unsplash.jpg
 embeddedImages:
