--- a/@pauliescanlon/gatsby-theme-terminal/src/posts/dummy-post.mdx
+++ b/@pauliescanlon/gatsby-theme-terminal/src/posts/dummy-post.mdx
@@ -1,9 +1,10 @@
 ---
 title: dummy
-tags: ["Dummy", "Tags"]
+tags: ['Dummy', 'Tags']
 date: 2020-01-17
 dataModified: 2020-02-17
-status: "draft"
+author: 'dummy'
+status: 'draft'
 featuredImage: 1x1.jpg
 embeddedImages:
   - 1x1.jpg
