--- a/demo/src/pages/theme-ui-components.mdx
+++ b/demo/src/pages/theme-ui-components.mdx
@@ -175,9 +175,12 @@ If you'd like to see the default theme `.js` that file can be found in [here](ht
 
 <Divider />
 
-<!-- ## [Forms](#forms)
+## [Forms](#forms)
 
 ```javascript
+<Box
+  as='form'
+>
 <Label htmlFor='input'>Input</Label>
 <Input
   name='username'
@@ -209,8 +212,9 @@ If you'd like to see the default theme `.js` that file can be found in [here](ht
   rows='6'
   mb={3}
 />
+</Box>
 ```
-
+<Box as='form' >
 <Label htmlFor='input'>Input</Label>
 <Input
   name='username'
@@ -241,8 +245,8 @@ If you'd like to see the default theme `.js` that file can be found in [here](ht
   name='textarea'
   rows='6'
   mb={3}
-/> -->
-
+/>
+</Box>
 
 ## [Label](#label) 
 
