--- a/demo/src/pages/markdown.mdx
+++ b/demo/src/pages/markdown.mdx
@@ -1,7 +1,3 @@
----
-navigationLabel: Markdown
----
-
 # markdown
 
 gatsby-theme-terminal supports the full set of [markdown shortcodes](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet)
@@ -45,10 +41,10 @@ Alternatively, for h1 and h2, an underline-ish style:
 
 Alt-h2
 
-<!-- TODO Emphasis not working -->
-<!-- ## Emphasis
 
-```
+## [Emphasis](#emphasis)
+
+```markdown
 Emphasis, aka italics, with *asterisks* or _underscores_.
 
 Strong emphasis, aka bold, with **asterisks** or __underscores__.
@@ -58,13 +54,13 @@ Combined emphasis with **asterisks and _underscores_**.
 Strikethrough uses two tildes. ~~Scratch this.~~
 ```
 
-Emphasis, aka italics, with asterisks or underscores.
+Emphasis, aka italics, with *asterisks* or _underscores_.
 
-Strong emphasis, aka bold, with asterisks or underscores.
+Strong emphasis, aka bold, with **asterisks** or __underscores__.
 
-Combined emphasis with asterisks and underscores.
+Combined emphasis with **asterisks and _underscores_**.
 
-Strikethrough uses two tildes. Scratch this. -->
+Strikethrough uses two tildes. ~~Scratch this.~~
 
 <hr />
 
@@ -75,9 +71,7 @@ Strikethrough uses two tildes. Scratch this. -->
 ```markdown
 1. First ordered list item
 2. Another item
-⋅⋅* Unordered sub-list.
 1. Actual numbers don't matter, just that it's a number
-⋅⋅1. Ordered sub-list
 4. And another item.
 
 
@@ -88,9 +82,7 @@ Strikethrough uses two tildes. Scratch this. -->
 
 1. First ordered list item
 2. Another item
-   ⋅⋅\* Unordered sub-list.
 3. Actual numbers don't matter, just that it's a number
-   ⋅⋅1. Ordered sub-list
 4. And another item.
 
 - Unordered list can use asterisks
@@ -229,21 +221,18 @@ alert(s)
 ```
 
 
-<!-- TODO Tables don't align properly -->
-
-<!-- 
-## Tables
+## [Tables](#tables)
 
 Tables aren't part of the core Markdown spec, but they are part of GFM and Markdown Here supports them. They are an easy way of adding tables to your email -- a task that would otherwise require copy-pasting from another application.
 
-```
+```markdown
 Colons can be used to align columns.
 
 | Tables        |      Are      |   Cool |
-| ------------- | :-----------: | -----: |
-| col 3 is      | right-aligned | \$1600 |
-| col 2 is      |   centered    |   \$12 |
-| zebra stripes |   are neat    |    \$1 |
+| ------------- | :-----------: | ------:|
+| col 3 is      | right-aligned |  \$1600 |
+| col 2 is      |   centered    |    \$12 |
+| zebra stripes |   are neat    |     \$1 |
 
 There must be at least 3 dashes separating each header cell.
 The outer pipes (|) are optional, and you don't need to make the
@@ -271,7 +260,9 @@ raw Markdown line up prettily. You can also use inline Markdown.
 | Markdown | Less      | Pretty     |
 | -------- | --------- | ---------- |
 | _Still_  | `renders` | **nicely** |
-| 1        | 2         | 3          | -->
+| 1        | 2         | 3          |
+
+<hr />
 
 ## [Blockquotes](#blockquotes)
 
@@ -314,11 +305,11 @@ You can also use raw HTML in your Markdown, and it'll mostly work pretty well.
   <dd>Does *not* work **very** well. Use HTML <em>tags</em>.</dd>
 </dl>
 
-<!-- TODO Horizontal rule styles -->
+<hr />
 
-<!-- ## Horizontal Rule
+## [Horizontal Rule](#horizontal-rule)
 
-```
+```markdown
 Three or more...
 
 ---
@@ -346,16 +337,14 @@ Asterisks
 
 ___
 
-Underscores -->
+Underscores
 
-<!-- TODO not sure about line breaks -->
 
-<!-- 
-## Line Breaks
+## [Line Breaks](#line-breaks)
 
-My basic recommendation for learning how line breaks work is to experiment and discover -- hit <Enter> once (i.e., insert one newline), then hit it twice (i.e., insert two newlines), see what happens. You'll soon learn to get what you want. "Markdown Toggle" is your friend.
+My basic recommendation for learning how line breaks work is to experiment and discover -- hit `<Enter>` once (i.e., insert one newline), then hit it twice (i.e., insert two new lines), see what happens. You'll soon learn to get what you want. "Markdown Toggle" is your friend.
 
-```
+```markdown
 
 Here's a line for us to start with.
 
@@ -364,4 +353,4 @@ This line is separated from the one above by two newlines, so it will be a *sepa
 This line is also a separate paragraph, but...
 This line is only separated by a single newline, so it's a separate line in the *same paragraph*.
 
-``` -->
+```
