--- a/demo/src/pages/posts.mdx
+++ b/demo/src/pages/posts.mdx
@@ -54,7 +54,9 @@ Here we use it to return all the `posts` by using the filter prop
                     {title}
                   </Heading>
                   {/* <Text sx={{mb: 2, color: 'muted'}}>{date}</Text> */}
-                  <Text sx={{mb: 3, border: '1px solid green', color: 'text', flex: '1 1 auto'}}>{excerpt}</Text>
+                  <Box sx={{flex: '1 1 auto',  border: '1px solid yellow',}}>
+                   <Text sx={{mb: 3, border: '1px solid green', color: 'text'}}>{excerpt}</Text>
+                  </Box>
                   {/* <Box sx={{display: 'block', mb: 2 }}>
                   {tags &&
                     tags.map((tag, index) => (
