--- a/demo/src/pages/posts.mdx
+++ b/demo/src/pages/posts.mdx
@@ -28,10 +28,10 @@ Here we use it to return all the `posts` by using the filter prop
         return (
           <Box
             key={index}
-            sx={{ display: 'flex', flex: '1 1 auto', flexDirection: 'column', mb: 3, width: ["100%", "100%", "50%", "33.333%"], pl: 2, pr: 2, outline: '1px solid red' }}
+            sx={{ display: 'flex', flex: '1 1 auto', flexDirection: 'column', mb: 3, width: ["100%", "100%", "50%", "33.333%"], outline: '1px solid red' }}
           >
-            {/* <Link href={slug} sx={{ textDecoration: "none", display: 'flex', flex: '1 1 auto' }}>
-             <Box sx={{border: '1px solid red', display: 'flex', flex: '1 1 auto'}}> */}
+             <Link href={slug} sx={{ textDecoration: "none", display: 'flex', flex: '1 1 auto', flexDirection: 'column' }}>
+    
                <Card sx={{ display: 'flex', flex: '1 1 auto', flexDirection: 'column', outline: '1px solid blue' }}>
                 {/* {featuredImage && featuredImage.childImageSharp && (
                   <Box sx={{ position: 'relative', overflow: 'hidden' }}>
@@ -41,52 +41,24 @@ Here we use it to return all the `posts` by using the filter prop
                     />
                   </Box>
                 )} */}
-                {/* <Box
-                  sx={{
-                    display: 'flex',
-                    flexDirection: 'column',
-                    flex: '1 1 auto',
-                    p: 3,
-                    border: '1px solid yellow'
-                  }}
-                > */}
-                  <Box sx={{ display: 'flex', flex: '1 1 auto', flexDirection: 'column', border: '1px solid yellow',}}>
+                  <Box sx={{ 
+                    display: 'flex', 
+                    flex: '1 1 auto', 
+                    flexDirection: 'column', 
+                    border: '1px solid yellow', 
+                    p: 3}}>
                   <Heading variant="styles.h4" sx={{ color: "text" }}>
                     {title}
                   </Heading>
-                  {/* <Text sx={{mb: 2, color: 'muted'}}>{date}</Text> */}
-                   <Text sx={{mb: 3, border: '1px solid green', color: 'text'}}>{excerpt}</Text>
+                   <Text sx={{mb: 1, color: 'muted'}}>{date}</Text>
+                   <Text sx={{mb: 1, border: '1px solid green', color: 'text'}}>{excerpt}</Text>
                   </Box>
-                  {/* <Box sx={{display: 'block', mb: 2 }}>
-                  {tags &&
-                    tags.map((tag, index) => (
-                      <Badge
-                        key={index}
-                        sx={{
-                          mr: 2,
-                          mb: 2,
-                          color: mix(
-                            "muted",
-                            "primary",
-                            `${index / tags.length}`
-                          ),
-                          borderColor: mix(
-                            "muted",
-                            "primary",
-                            `${index / tags.length}`
-                          ),
-                        }}
-                        variant="primary"
-                      >
-                        {tag}
-                      </Badge>
-                    ))}
-                  </Box> */}
+                  <Box sx={{p: theme => `0px ${theme.space[3]}px`}}>
                   <Text>View Post</Text>
-                {/* </Box> */}
+                  </Box>
               </Card>
-             {/* </Box>
-            </Link> */}
+   
+            </Link> 
           </Box>
         )
       })}
