--- a/demo/src/pages/posts.mdx
+++ b/demo/src/pages/posts.mdx
@@ -28,11 +28,11 @@ Here we use it to return all the `posts` by using the filter prop
         return (
           <Box
             key={index}
-            sx={{ display: 'flex', flex: '1 1 auto', flexDirection: 'column', mb: 3, width: ["100%", "100%", "50%", "33.333%"], outline: '1px solid red' }}
+            sx={{ display: 'flex', flex: '1 1 auto', flexDirection: 'column', mb: 3, width: ["100%", "100%", "50%", "33.333%"] }}
           >
-             <Link href={slug} sx={{ textDecoration: "none", display: 'flex', flex: '1 1 auto', flexDirection: 'column' }}>
+             <Link href={slug} sx={{ textDecoration: "none", display: 'flex', flex: '1 1 auto', flexDirection: 'column', m: theme => `0px ${theme.space[2]}px` }}>
     
-               <Card sx={{ display: 'flex', flex: '1 1 auto', flexDirection: 'column', outline: '1px solid blue' }}>
+               <Card sx={{ display: 'flex', flex: '1 1 auto', flexDirection: 'column' }}>
                 {/* {featuredImage && featuredImage.childImageSharp && (
                   <Box sx={{ position: 'relative', overflow: 'hidden' }}>
                     <Image
@@ -45,15 +45,14 @@ Here we use it to return all the `posts` by using the filter prop
                     display: 'flex', 
                     flex: '1 1 auto', 
                     flexDirection: 'column', 
-                    border: '1px solid yellow', 
                     p: 3}}>
                   <Heading variant="styles.h4" sx={{ color: "text" }}>
                     {title}
                   </Heading>
                    <Text sx={{mb: 1, color: 'muted'}}>{date}</Text>
-                   <Text sx={{mb: 1, border: '1px solid green', color: 'text'}}>{excerpt}</Text>
+                   <Text sx={{mb: 1, color: 'text'}}>{excerpt}</Text>
                   </Box>
-                  <Box sx={{p: theme => `0px ${theme.space[3]}px`}}>
+                  <Box sx={{p: 3}}>
                   <Text>View Post</Text>
                   </Box>
               </Card>
