--- a/demo/src/pages/posts.mdx
+++ b/demo/src/pages/posts.mdx
@@ -33,14 +33,14 @@ Here we use it to return all the `posts` by using the filter prop
              <Link href={slug} sx={{ textDecoration: "none", display: 'flex', flex: '1 1 auto', flexDirection: 'column', m: theme => `0px ${theme.space[2]}px` }}>
     
                <Card sx={{ display: 'flex', flex: '1 1 auto', flexDirection: 'column' }}>
-                {/* {featuredImage && featuredImage.childImageSharp && (
+                {featuredImage && featuredImage.childImageSharp && (
                   <Box sx={{ position: 'relative', overflow: 'hidden' }}>
                     <Image
                       src={featuredImage.childImageSharp.fluid.src}
                       alt={featuredImage.childImageSharp.fluid.originalName}
                     />
                   </Box>
-                )} */}
+                )}
                   <Box sx={{ 
                     display: 'flex', 
                     flex: '1 1 auto', 
