--- a/demo/src/pages/posts.mdx
+++ b/demo/src/pages/posts.mdx
@@ -30,9 +30,9 @@ Here we use it to return all the `posts` by using the filter prop
             key={index}
             sx={{ display: 'flex', flex: '1 1 auto', flexDirection: 'column', mb: 3, width: ["100%", "100%", "50%", "33.333%"] }}
           >
-             <Link href={slug} sx={{ textDecoration: "none", display: 'flex', flex: '1 1 auto', flexDirection: 'column', m: theme => `0px ${theme.space[2]}px` }}>
+             <Link href={slug} sx={{ textDecoration: "none", display: 'flex', flex: '1 1 auto', flexDirection: 'column', m: theme => `0px ${theme.space[2]}px`, minHeight: '1px' }}>
     
-               <Card sx={{ display: 'flex', flex: '1 1 auto', flexDirection: 'column' }}>
+               <Card sx={{ display: 'flex', flex: '1 1 auto', flexDirection: 'column', minHeight: '1px' }}>
                 {featuredImage && featuredImage.childImageSharp && (
                   <Box sx={{ minHeight: '1px'}}>
                     <Image
