complete markdown syntax

--- a/demo/src/pages/markdown.mdx
+++ b/demo/src/pages/markdown.mdx
@@ -1,4 +1,8 @@
-# markdown
+---
+navigationLabel: Markdown
+---
+
+# [markdown](#markdown)
 
 gatsby-theme-terminal supports the full set of [markdown shortcodes](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet)
 
