--- a/@pauliescanlon/gatsby-theme-terminal/src/posts/dummy-post.mdx
+++ b/@pauliescanlon/gatsby-theme-terminal/src/posts/dummy-post.mdx
@@ -2,7 +2,7 @@
 title: dummy
 tags: ['Dummy', 'Tags']
 date: 2020-01-17
-dataModified: 2020-02-17
+dateModified: 2020-02-17
 author: 'dummy'
 status: 'draft'
 featuredImage: 1x1.jpg
