--- a/demo/src/pages/index.mdx
+++ b/demo/src/pages/index.mdx
@@ -54,7 +54,7 @@ Write anything you want in `src/pages/index.mdx` and it'll go here.
   <Link href='https://github.com/PaulieScanlon/' variant='styles.a'>https://github.com/PaulieScanlon/</Link>
   <Divider />
 
-  <Heading variant='styles.h3' sx={{mb: 0}}>GitHub</Heading>
+  <Heading variant='styles.h3' sx={{mb: 0}}>LinkedIn</Heading>
   <Link href='https://www.linkedin.com/in/pauliescanlon/' variant='styles.a'>https://linkedin.com/in/pauliescanlon/</Link>
   <Divider />
 
