add profileImage to config

--- a/demo/src/pages/index.mdx
+++ b/demo/src/pages/index.mdx
@@ -6,21 +6,22 @@ navigationLabel: Home
 {siteMetadata => {
   const { name, description } = siteMetadata
   return (
-    <Fragment>
-      <Heading variant='styles.h1'>{name}</Heading>
-      <Text>{description}</Text>
-      <Divider/>
-    </Fragment>
+        <Fragment>
+        <Heading variant='styles.h1'>{name}</Heading>
+        <Text>{description}</Text>
+        </Fragment>
   )
 }}
 </SiteMetaData>
 
-<Button as='a' variant='success' href='https://docs.google.com/document/d/10Z8w-099fRjVB1zA1Y9F3zVWtW1RfIxnOTIyrYn0HcY/edit' target='_blank'>View CV</Button>{" "}
-<Link href='https://docs.google.com/document/d/10Z8w-099fRjVB1zA1Y9F3zVWtW1RfIxnOTIyrYn0HcY/edit' target='_blank' >docs.google.com</Link>
+<Divider/>
+
+<Button as='a' variant='success' href='https://github.com/PaulieScanlon/gatsby-theme-terminal' target='_blank'>View Repo</Button>{" "}
+<Link href='https://github.com/PaulieScanlon/gatsby-theme-terminal' target='_blank' >gatsby-theme-terminal</Link>
 <Divider />
 
 <Alert variant='success'>
-  Alert... I'm available for contract React/Gatsby work!
+  Alert... My website is faster than yours!
 </Alert>
 <Divider />
 <Divider />
@@ -43,7 +44,7 @@ Write anything you want in `src/pages/index.mdx` and it'll go here.
   ## Contact
 
   <Heading variant='styles.h3' sx={{mb: 0}}>Email</Heading>
-  <Link href='mailto:pauliescanlon@gmail.com' variant='styles.a'>pauliescanlon@gmail.com</Link>
+  <Link href='mailto:******@gmail.com' variant='styles.a'>******@gmail.com</Link>
   <Divider />
 
   <Heading variant='styles.h3' sx={{mb: 0,}}>Twitter</Heading>
@@ -55,7 +56,7 @@ Write anything you want in `src/pages/index.mdx` and it'll go here.
   <Divider />
 
   <Heading variant='styles.h3' sx={{mb: 0}}>LinkedIn</Heading>
-  <Link href='https://www.linkedin.com/in/pauliescanlon/' variant='styles.a'>https://linkedin.com/in/pauliescanlon/</Link>
+  <Link href='https://www.linkedin.com/in/PaulieScanlon/' variant='styles.a'>https://linkedin.com/in/PaulieScanlon/</Link>
   <Divider />
 
   </Box>
