update og image

--- a/demo/src/pages/index.mdx
+++ b/demo/src/pages/index.mdx
@@ -16,8 +16,8 @@ navigationLabel: Home
 
 <Divider/>
 
-<Button as='a' variant='success' href='https://github.com/PaulieScanlon/gatsby-theme-terminal' target='_blank'>View Repo</Button>{" "}
-<Link href='https://github.com/PaulieScanlon/gatsby-theme-terminal' target='_blank' >gatsby-theme-terminal</Link>
+<Button sx={{mb: 2}} as='a' variant='success' href='https://github.com/PaulieScanlon/gatsby-theme-terminal' target='_blank'>View theme on GitHub</Button>{" "}
+<Link sx={{whiteSpace: 'nowrap',}} href='https://github.com/PaulieScanlon/gatsby-theme-terminal' target='_blank' >gatsby-theme-terminal</Link>
 <Divider />
 
 <Alert variant='success'>
